# api/interfaces.go
@@ -17,7 +17,7 @@ type MongoServer interface {
 	Checker(ctx context.Context, state *healthcheck.CheckState) (err error)
 	UpsertInteractive(ctx context.Context, id string, vis *models.Interactive) (err error)
 	GetActiveInteractiveGivenSha(ctx context.Context, sha string) (*models.Interactive, error)
-	GetActiveInteractiveGivenTitle(ctx context.Context, title string) (*models.Interactive, error)
+	GetActiveInteractiveGivenField(ctx context.Context, fieldName, fieldValue string) (*models.Interactive, error)
 	GetInteractive(ctx context.Context, id string) (*models.Interactive, error)
 	ListInteractives(ctx context.Context, offset, limit int, filter *models.InteractiveMetadata) ([]*models.Interactive, int, error)
 }
